--- a/style/style.css
+++ b/style/style.css
@@ -1,49 +1,131 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Space Mono', monospace;
+    font-family: 'Work Sans', sans-serif;
 }
-:root{
+
+:root {
     --linear: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
     --linear2: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     --secondary-color: #4EC5F7;
     --des-color: #534C64;
 }
+
 /* nav section start here  */
-header{
+header {
     margin: 30px 200px;
 }
-.logo-container{
+
+.logo-container {
     display: flex;
     align-items: center;
-    
-}
-.logo{
-    
-}
-.logo-text{
-    
-}
-
-.nav-item{
+    gap: 10px;
 
 }
-nav{
+
+.logo {}
+
+.logo-text {
+    font-size: 2.9rem;
+    font-weight: 700;
+
+}
+
+.pink {
+    background: var(--linear);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.nav-item {}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05); */
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
-}
-nav ul li{
-margin-right: 28px;
+    align-items: center;
 }
 
+nav ul li {
+    margin-right: 28px;
+    font-weight: 500;
+}
 
-
+.nav-item {
+    padding: 18px 18px;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+}
 
 /* nav section ends here  */
+
+/* banner part start here  */
+.banner-section {
+    margin: 50px 0;
+    display: flex;
+}
+
+.banner-content {
+    background-image: url("../images/Group\ 14.png");
+    width: 50%;
+}
+
+.banner-title {
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 100px;
+
+}
+
+.banner-title1 {
+    font-size: 6rem;
+    background: var(--linear2);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.banner-des {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: var(--des-color);
+    margin: 10px 0;
+}
+
+.primary-btn {
+    padding: 18px 35px;
+    border-radius: 48px;
+    margin-right: 20px;
+    font-weight: 600;
+    color: white;
+    
+}
+
+.sec-btn {
+    padding: 18px 35px;
+    border-radius: 48px;
+    font-weight: 600;
+    color: white;
+
+}
+
+.banner-img {
+    width: 100%;
+}
+
+.banner-img-container {
+    width: 50%;
+}
+
+/* banner part end here  */
