--- a/style/style.css
+++ b/style/style.css
@@ -177,6 +177,25 @@ main {
 .games-card {
     margin: 20px 0;
 }
+.games-icon-card{
+    position: relative;
+}
+.icon-con{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+}
+.overly{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.274);
+}
 
 .games-img {
     width: 100%;
@@ -199,15 +218,19 @@ main {
     align-items: center;
     margin-top: 60px;
     /* gap: 100px; */
+    /* position: relative; */
 }
 
 .play-instant-content {
     width: 35%;
     margin: auto;
     position: relative;
-    top: -125px;
+    top: 35%;;
 }
-
+.play-inside{
+    position: absolute;
+   bottom: 20%;
+}
 .play-title {
     font-size: 2.9rem;
     font-weight: 700;
@@ -217,6 +240,7 @@ main {
 
 .play-imgs-container {
     width: 50%;
+    position: relative;
 }
 
 .play-img {}
@@ -229,8 +253,9 @@ main {
 
 .small-img {
     width: 40%;
-    position: relative;
-    top: -200px;
+    position: absolute;
+    top: 50%;
+    left: 4%;
 }
 
 .play-des{
@@ -239,3 +264,91 @@ main {
     font-weight: 400;
 }
 /* play instant ends here  */
+.cat-box{
+    display: flex;
+    /* justify-content: ; */
+    gap: 5px;
+    border-radius: 50px;
+    background-color: white;
+    box-shadow: 4px 4px 4px gray;
+    align-items: center;
+    padding: 5px 10px;
+    
+}
+.catagories-section{
+    display: flex;
+    flex-basis: 281px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 60px;
+
+}
+section div img{
+    /* width: 40%; */
+}
+.cat-box:hover{
+    border:  3px solid #F948B2;
+}
+
+
+
+/* footer stat here  */
+footer{
+    /* margin: 1000px auto; */
+    background: #0B0223;
+    height: auto;
+}
+.white{
+    /* background: white; */
+    color: white;
+    text-align: center;
+}
+.footer-container{
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px ;
+    margin-bottom: 40px;
+    padding-top: 100px;
+
+}
+.footer-item{
+    color: white;
+    text-align: center;
+    margin-right: 40px;
+    margin-bottom: 40px;
+    font-size: 1.1rem;
+    font-weight: 600;
+
+}
+.footer-list{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.fa-brands{
+    
+}
+.footer-item-2{
+    font-size: 2rem;
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+.footer-item-3{
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.60);
+    font-weight: 500;
+}
+.footer-text{
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    padding-bottom: 100px;
+}
+
+
+
+/* footer stat here  */
+
+
+
