--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ nav ul li {
 }
 
 .banner-content {
-    background-image: url("../images/Group\ 14.png");
+    /* background-image: url("../images/Group\ 14.png"); */
     width: 50%;
 }
 
@@ -194,7 +194,7 @@ main {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.274);
+    background-color: rgba(0, 0, 0, 0.507);
 }
 
 .games-img {
@@ -224,12 +224,13 @@ main {
 .play-instant-content {
     width: 35%;
     margin: auto;
-    position: relative;
-    top: 35%;;
+    /* position: relative; */
+    /* top: 35%; */
 }
 .play-inside{
-    position: absolute;
-   bottom: 20%;
+    position: relative;
+   /* top: -20%; */
+   bottom: 50%;
 }
 .play-title {
     font-size: 2.9rem;
@@ -248,7 +249,7 @@ main {
 .big-img {
     width: 80%;
     position: relative;
-    left: 120px;
+    left: 20%;
 }
 
 .small-img {
@@ -277,7 +278,7 @@ main {
 }
 .catagories-section{
     display: flex;
-    flex-basis: 281px;
+    /* flex-basis: 100px; */
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
@@ -326,6 +327,17 @@ footer{
 .footer-list{
     text-align: center;
     margin-bottom: 40px;
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+}
+.footer-list p{
+    font-weight: 400;
+}
+.footer-list2{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
 }
 .fa-brands{
     
@@ -346,6 +358,14 @@ footer{
     padding-bottom: 100px;
 }
 
+.watch{
+    color: #F948B2;
+    font-weight: 600;
+}
+.online-games i{
+    font-size: 2rem;
+    margin-bottom: 5px;
+}
 
 
 /* footer stat here  */
