--- a/style/style.css
+++ b/style/style.css
@@ -71,14 +71,18 @@ nav ul li {
 
 /* banner part start here  */
 .banner-section {
+    background-image: url("../images/Group\ 14.png");
+    background-position: left;
+    background-size: 50%;
     margin: 50px 0;
     display: flex;
     justify-content: space-between;
 }
 
 .banner-content {
-    /* background-image: url("../images/Group\ 14.png"); */
+    background-image: url("../images/Group\ 14.png");
     width: 50%;
+    padding-bottom: 20px;
 }
 
 .banner-title {
@@ -177,10 +181,12 @@ main {
 .games-card {
     margin: 20px 0;
 }
-.games-icon-card{
+
+.games-icon-card {
     position: relative;
 }
-.icon-con{
+
+.icon-con {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -188,7 +194,8 @@ main {
     color: white;
     transform: translate(-50%, -50%);
 }
-.overly{
+
+.overly {
     position: absolute;
     left: 0;
     top: 0;
@@ -207,6 +214,15 @@ main {
     margin: 10px;
     font-size: 1.2rem;
     font-weight: 500;
+}
+.watch {
+    color: #F948B2;
+    font-weight: 600;
+}
+
+.online-games i {
+    font-size: 2rem;
+    margin-bottom: 5px;
 }
 
 /* online games ends here  */
@@ -227,11 +243,13 @@ main {
     /* position: relative; */
     /* top: 35%; */
 }
-.play-inside{
+
+.play-inside {
     position: relative;
-   /* top: -20%; */
-   bottom: 50%;
+    /* top: -20%; */
+    bottom: 50%;
 }
+
 .play-title {
     font-size: 2.9rem;
     font-weight: 700;
@@ -259,13 +277,15 @@ main {
     left: 4%;
 }
 
-.play-des{
+.play-des {
     text-align: right;
     font-size: 1.2rem;
     font-weight: 400;
 }
+
 /* play instant ends here  */
-.cat-box{
+/* catagories section start here  */
+.cat-box {
     display: flex;
     /* justify-content: ; */
     gap: 5px;
@@ -274,9 +294,12 @@ main {
     box-shadow: 4px 4px 4px gray;
     align-items: center;
     padding: 5px 10px;
-    
+    border: 3px solid transparent;
+
+
 }
-.catagories-section{
+
+.catagories-section {
     display: flex;
     /* flex-basis: 100px; */
     flex-wrap: wrap;
@@ -285,37 +308,43 @@ main {
     margin-top: 60px;
 
 }
-section div img{
+
+section div img {
     /* width: 40%; */
 }
-.cat-box:hover{
-    border:  3px solid #F948B2;
+
+.cat-box:hover {
+    border: 3px solid #F948B2;
 }
 
+/* catagories section end here  */
 
 
 /* footer stat here  */
-footer{
+footer {
     /* margin: 1000px auto; */
     background: #0B0223;
     height: auto;
 }
-.white{
+
+.white {
     /* background: white; */
     color: white;
     text-align: center;
 }
-.footer-container{
+
+.footer-container {
     /* text-align: center; */
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px ;
+    margin-top: 100px;
     margin-bottom: 40px;
     padding-top: 100px;
 
 }
-.footer-item{
+
+.footer-item {
     color: white;
     text-align: center;
     margin-right: 40px;
@@ -324,51 +353,46 @@ footer{
     font-weight: 600;
 
 }
-.footer-list{
+
+.footer-list {
     text-align: center;
     margin-bottom: 40px;
     width: 80%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
 }
-.footer-list p{
+
+.footer-list p {
     font-weight: 400;
 }
-.footer-list2{
+
+.footer-list2 {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
-.fa-brands{
-    
-}
-.footer-item-2{
+
+.fa-brands {}
+
+.footer-item-2 {
     font-size: 2rem;
     margin-right: 40px;
     margin-bottom: 40px;
 }
-.footer-item-3{
+
+.footer-item-3 {
     font-size: 1rem;
     color: rgba(255, 255, 255, 0.60);
     font-weight: 500;
 }
-.footer-text{
+
+.footer-text {
     color: rgba(255, 255, 255, 0.60);
     text-align: center;
     padding-bottom: 100px;
 }
 
-.watch{
-    color: #F948B2;
-    font-weight: 600;
-}
-.online-games i{
-    font-size: 2rem;
-    margin-bottom: 5px;
-}
+
 
 
 /* footer stat here  */
-
-
-
