--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,4 +1,6 @@
 @media screen and (max-width: 576px) {
+        /* header section starts  */
+
     header {
         margin: 20px 40px !important;
     }
@@ -35,10 +37,12 @@
     .banner-img-container {
         width: 100%;
     }
+    /* header section ends  */
 
     main {
         margin: 20px 40px;
     }
+
     .gamer-content{
         width: auto;
         text-align: center;
