--- a/style/tablet.css
+++ b/style/tablet.css
@@ -1,78 +1,108 @@
 @media screen and (min-width:576px) and (max-width: 960px) {
-        header {
-            margin: 20px 40px !important;
-        }
-    
-    
-        nav {
-            flex-direction: column;
-        }
-    
-        .logo-container {
-            /* flex-direction: column; */
-            margin-bottom: 40px;
-        }
-    
-        ul {
-            flex-direction: column;
-    
-        }
-    
-        ul li {
-            margin-bottom: 20px;
-    
-        }
-    
-        .banner-section {
-            flex-direction: column-reverse;
-        }
-    
-        .banner-content {
-            width: auto;
-            text-align: center;
-        }
-    
-        .banner-img-container {
-            width: 100%;
-        }
-    
-        main {
-            margin: 20px 40px;
-        }
-        .online-games p{
-            text-align: center;
-        }
-        .online-games-container {
-            grid-template-columns: 1fr;
-        }
-    
-        .play-instant-container{
-            flex-direction: column;
-        }
-        .play-instant-content{
-            width: auto;
-        }
-        .play-imgs-container{
-            width: auto;
-        }
-        .play-des{
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .play-title{
-            text-align: center;
-        }
-    footer{
+    header {
+        margin: 20px 40px !important;
+    }
+
+
+    nav {
+        flex-direction: column;
+    }
+
+    .logo-container {
+        /* flex-direction: column; */
+        margin-bottom: 40px;
+    }
+
+    ul {
+        flex-direction: column;
+
+    }
+
+    ul li {
+        margin-bottom: 20px;
+
+    }
+
+    .banner-section {
+        flex-direction: column-reverse;
+    }
+
+    .banner-content {
+        width: auto;
+        text-align: center;
+    }
+
+    .banner-img-container {
+        width: 100%;
+    }
+
+    main {
+        margin: 20px 40px;
+    }
+
+    .gamer-content {
+        width: auto;
+        text-align: center;
+    }
+
+    .gamer-b-title {
+        margin-top: 20px;
+    }
+
+    .gamer-img {
+        width: auto;
+    }
+
+    .we-are-gamer {
+        flex-direction: column;
+    }
+
+    .online-games p {
+        text-align: center;
+    }
+
+    .online-games p {
+        text-align: center;
+    }
+
+    .online-games-container {
+        grid-template-columns: 1fr;
+    }
+
+    .play-instant-container {
+        flex-direction: column;
+    }
+
+    .play-instant-content {
+        width: auto;
+    }
+
+    .play-imgs-container {
+        width: auto;
+    }
+
+    .play-des {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .play-title {
+        text-align: center;
+    }
+
+    footer {
         /* margin: 40px 40px; */
     }
-    .footer-list{
-        grid-template-columns: repeat(3,1fr);
+
+    .footer-list {
+        grid-template-columns: repeat(3, 1fr);
     }
-    .footer-list2{
+
+    .footer-list2 {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-    
-    
-    
-    }
+
+
+
+}
