--- a/style/tablet.css
+++ b/style/tablet.css
@@ -30,6 +30,7 @@
     .banner-content {
         width: auto;
         text-align: center;
+        padding-left: none;
     }
 
     .banner-img-container {
